<resources>
    <string name="app_name">Excels</string>
    <string name="action_settings">Settings</string>
    <string name="department">Department</string>
    <string name="semester">Semester</string>
    <string name="Crname">CR Name</string>
    <string name="Crlastname">CR Lastname</string>
    <string name="Crnumber">CR Number</string>
    <string-array name="departmentname">
        <item>Computer</item>
        <item>Civil</item>
        <item>Imformation_Technology</item>
        <item>Electrical</item>
        <item>Macatronics</item>
        <item>Electronic_And_Communication</item>
        <item>Mechanical</item>
    </string-array>
    <string-array name="semester">
        <item>Semester_1</item>
        <item>Semester_2</item>
        <item>Semester_3</item>
        <item>Semester_4</item>
        <item>Semester_5</item>
        <item>Semester_6</item>
        <item>Semester_7</item>
        <item>Semester_8</item>
    </string-array>
    <string name="title_activity_signup_activity">Signup_activity</string>
    <string name="title_activity_choice_activity">Choice_activity</string>

    <string name="register">register</string>
    <string name="takeAttendance">Take Attendance</string>

    <string name="signupName">Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">New Password</string>
    <string name="signupConfirmPassword">Confrim Password</string>
    <string name="signupQuit">Quit</string>
    <string name="signupSubmit">Submit</string>

</resources>
