<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jigar.excels.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:textSize="21dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/department"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="0dp"
            android:id="@+id/department_spinner"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:textSize="21dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/semester"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="0dp"
            android:id="@+id/semester_spinner"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"></Spinner>
    </LinearLayout>
    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/Crname"
        android:textAlignment="center"
        android:id="@+id/crname_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/Crlastname"
        android:textAlignment="center"
        android:id="@+id/crlastname_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/crnumber_edt"
        android:layout_marginTop="10dp"
        android:hint="@string/Crnumber"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
