<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jigar.excels.Signup_activity"
    tools:showIn="@layout/activity_signup_activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signupName"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:background="#D6EAF8"
            android:id="@+id/signupNameEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signupEmail"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:background="#D6EAF8"
            android:id="@+id/signupEmailEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signupPassword"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:inputType="textPassword"
            android:background="#D6EAF8"
            android:id="@+id/signupPasswordEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signupConfirmPassword"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:inputType="textPassword"
            android:background="#D6EAF8"
            android:id="@+id/signupConfirmpassEt"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signupQuit"
                android:layout_weight="1"
                android:id="@+id/signupQuitBtn"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signupSubmit"
                android:layout_weight="1"
                android:id="@+id/signupSubmitBtn"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
